--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"> <!-- thymeleaf를 th로 사용하겠다는 의미, th 설정 -->
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"> <!-- thymeleaf를 th로 사용하겠다는 의미, th 설정 -->
 <head>
     <meta charset="UTF-8">
     <title>메인 화면</title>
 </head>
 <body>
-<h1>게시물 목록이 출력될 예정입니다.</h1>
+<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}">관리자 페이지</a>
+<a sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+<a sec:authorize="isAuthenticated()" th:href="@{/user/logout}">로그아웃</a>
+<a sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
 <a th:href="@{/post}">글쓰기</a>
-<br><br>
+<br>
+<br>
 
 <!-- 검색 -->
 <form action="/board/search" method="GET">
